added 5 pages on tabs

--- a/app/tab1/tab1.page.html
+++ b/app/tab1/tab1.page.html
@@ -1,17 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      ABOUT ME
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-div class="container">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="2">Nama</ion-col>
+        <ion-col size="1">:</ion-col>
+        <ion-col size="3">Alfonsus Enrico</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2">NRP</ion-col>
+        <ion-col size="1">:</ion-col>
+        <ion-col size="3">C14180067</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2">Email</ion-col>
+        <ion-col size="1">:</ion-col>
+        <ion-col size="9">c14180067@john.petra.ac.id / enrico.soebijanto@gmail.com</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2">No. Hp</ion-col>
+        <ion-col size="1">:</ion-col>
+        <ion-col size="3">089680219972</ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-div>
 </ion-content>
