add: page2,3,4 content because similar functions

--- a/app/tab1/tab1.page.html
+++ b/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      ABOUT ME
+    <ion-title style="text-align:center">
+      About Me
     </ion-title>
   </ion-toolbar>
 </ion-header>
