--- a/app/tab2/tab2.page.html
+++ b/app/tab2/tab2.page.html
@@ -1,17 +1,28 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 2
+    <ion-title style="text-align:center">
+      Camera
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4" *ngFor="let foto of fotoService.dataFoto; index as position">
+        <ion-img [src]="foto.webviewPath" (click)="select(foto)"></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+
+<ion-footer>
+  <div style="text-align:center;">
+    <ion-button shape="round" (click)="tambahFoto()" style="text-align:center">
+      <ion-icon name="aperture-outline"></ion-icon>
+    </ion-button>
+  </div>
+  <div style="text-align:center;">
+    <ion-button color="primary" (click)="uploadFoto()">UPLOAD</ion-button>
+  </div>
+</ion-footer>
