--- a/app/tab4/tab4.page.html
+++ b/app/tab4/tab4.page.html
@@ -1,9 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tab4</ion-title>
+    <ion-title style="text-align:center">Photos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4" *ngFor="let iFoto of urlImageStorage">
+        <ion-img [src]="iFoto"></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
