--- a/app/tab5/tab5.page.html
+++ b/app/tab5/tab5.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tab5</ion-title>
+    <ion-title style="text-align:center">Review Kelas</ion-title>
   </ion-toolbar>
 </ion-header>
 
