add: back button on page4, content page5, re-design content page1

--- a/app/tab1/tab1.page.html
+++ b/app/tab1/tab1.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-div class="container">
+  <!-- <div class="container">
     <ion-grid>
       <ion-row>
         <ion-col size="2">Nama</ion-col>
@@ -30,5 +30,18 @@
         <ion-col size="3">089680219972</ion-col>
       </ion-row>
     </ion-grid>
-  </ion-div>
+  </div> -->
+
+  <ion-card>
+    <ion-card-header>
+      <div style="text-align:center;">
+        <img src="https://lh3.google.com/u/3/ogw/ADGmqu9TSkrZVzZiz9csFxV8PbywbU96nYV74dCuMHMx=s83-c-mo">
+      </div>
+      <ion-card-title style="text-align:center">Alfonsus Enrico - C14180067</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-label>c14180067@john.petra.ac.id</ion-label><br/>
+      <ion-label>089680219972</ion-label>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
