--- a/app/tab4/tab4.page.html
+++ b/app/tab4/tab4.page.html
@@ -1,5 +1,9 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/tab3">
+      </ion-back-button>
+    </ion-buttons>
     <ion-title style="text-align:center">Photos</ion-title>
   </ion-toolbar>
 </ion-header>
