--- a/app/tab5/tab5.page.html
+++ b/app/tab5/tab5.page.html
@@ -5,5 +5,28 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title><h1><b>Pengalaman Kelas</b></h1></ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Pengalaman saya selama kelas Pemrograman Mobile berbasis Web sejauh ini sangat baik, karena juga sudah pernah mengambil mata kuliah PPM yang materinya mirip, tetapi PMBW tetap memberi pelajaran dan ilmu baru. Saya sangat tertarik untuk terus mendalami ilmu dalam kelas PMBW ini karena saya juga sudah menentukan untuk mendalami ilmu menggunakan framework Ionic ini.
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title><h1><b>Kritik</b></h1></ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      #
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title><h1><b>Saran</b></h1></ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Menurut saya, konten materi bisa diberikan dalam bentuk pdf juga karena saya memiliki kendala dalam mengikuti video (internet lemot) karena faktor eksternal dimana lebih sering harus mengikuti kelas diluar rumah (membantu orang tua).
+    </ion-card-content>
+  </ion-card>
 </ion-content>
