--- a/app/tabs/tabs.page.html
+++ b/app/tabs/tabs.page.html
@@ -16,7 +16,7 @@
       <ion-label>List Photos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab4">
+    <ion-tab-button tab="tab4/{{condition}}">
       <ion-icon name="image-outline"></ion-icon>
       <ion-label>Photos</ion-label>
     </ion-tab-button>
