after test: add: multiple photo selection with border sign on page2

--- a/app/tab2/tab2.page.html
+++ b/app/tab2/tab2.page.html
@@ -9,8 +9,8 @@
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
-      <ion-col size="4" *ngFor="let foto of fotoService.dataFoto; index as position">
-        <ion-img [src]="foto.webviewPath" (click)="select(foto)"></ion-img>
+      <ion-col size="4" *ngFor="let foto of fotoService.dataFoto; let i = index">
+        <ion-img id="{{i}}" [src]="foto.webviewPath" (click)="select(foto,i)"></ion-img>
       </ion-col>
     </ion-row>
   </ion-grid>
